--- a/Website API/Version 2/templates/quizPage.html
+++ b/Website API/Version 2/templates/quizPage.html
@@ -62,7 +62,6 @@
                 </label>
             </div>
             {% endfor %}
-            </fieldset>
             <script type="text/javascript">
                 var wait = setTimeout("document.question.submit();", 5500);
             </script>
@@ -71,3 +70,4 @@
 
 
 </body>
+</html>
