--- a/Website API/Version 2/templates/home.html
+++ b/Website API/Version 2/templates/home.html
@@ -84,6 +84,12 @@
         </form>
     </div>
 
+    <hr>
+
+    <div class="container rounded" style="padding: 10px; background-color: rgb(220, 255, 255); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
+        <h4 style="text-align: center">Stats</h4>
+        You have entered <strong>{{ quizzesEntered }}</strong> quizzes and voted <strong>{{ votesEntered }}</strong> times.
+    </div>
 
     <div class="alert alert-warning" style="margin-top: 50px; font-style: italic; height: 10px">
         <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers
