Update Website API/Version 2/templates/adminPanel.html

--- a/Website API/Version 2/templates/adminPanel.html
+++ b/Website API/Version 2/templates/adminPanel.html
@@ -17,7 +17,10 @@
     <div class="alert alert-primary">
         <strong style="font-size: 20px">Charities Day Admin</strong>
     </div>
-    <span class="badge badge-success">Users: {{ userCount }}</span>
+    <div class="container">
+        <span class="badge badge-success">Users: {{ userCount }}</span>
+        <span class="badge badge-primary">Test</span>
+    </div>
     <div class="alert alert-warning" style="margin-top: 50px; font-style: italic; height: 10px">
         <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers
     </div>
