--- a/Website API/Version 2/templates/adminPanel.html
+++ b/Website API/Version 2/templates/adminPanel.html
@@ -17,36 +17,36 @@
     <div class="alert alert-primary">
         <strong style="font-size: 20px">Charities Day Admin</strong>
     </div>
-    <div class="container rounded" style="padding: 10px; background-color: rgb(220, 255, 255); border-radius: 15px;margin-left:2%; margin-right:2%; width:96%">
+    <div class="container rounded" style="padding: 10px; background-color: rgb(220, 255, 255); border-radius: 5px;margin-left:2%; margin-right:2%; width:96%">
         <div class="container bg-primary" style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
                 <strong>Users: </strong><span class="badge">{{ userCount }}</span>
         </div>
-        <div class="container bg-warning" style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
+        <div class="container bg-warning" style="padding:10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
                 <strong>Quiz SQL Entries: </strong><span class="badge">{{ quizSqlLen }}</span>
         </div>
         <div class="container" style="padding:10px; background-color: rgb(255, 255, 255); margin-top:5px; margin-bottom:15px; margin-left: 7%; margin-right: 7%; width:86%">
             {% for quiz in quizzes %}
                 {% if quiz.quizAvaliable %}
                     <div style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px" class="{{ loop.cycle('container bg-primary', 'container bg-info') }}"
-                        name='{{ quiz.voteName }}'><span class="glyphicon glyphicon-ok-circle"></span> {{ quiz.quizName }}</div>
+                        name='{{ quiz.voteName }}'><span class="glyphicon glyphicon-ok-circle"></span> <strong>{{ quiz.quizName }}</strong>: {{ quiz.quizCount }} answers</div>
                 {% else %}
                     <div style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px" class="{{ loop.cycle('container bg-primary', 'container bg-info') }}"
-                        name='{{ quiz.quizName }}'><span class="glyphicon glyphicon-remove-circle"></span> {{ quiz.quizName }}</div>
+                        name='{{ quiz.quizName }}'><span class="glyphicon glyphicon-remove-circle"></span> <strong>{{ quiz.quizName }}</strong>: {{ quiz.quizCount }} answers</div>
                 {% endif %}
             {% endfor %}
         </div>
         <hr>
-        <div class="container bg-warning" style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
+        <div class="container bg-warning" style="padding:10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
                 <strong>Vote SQL Entries: </strong><span class="badge">{{ voteSqlLen }}</span>
         </div>
         <div class="container" style="padding:10px; background-color: rgb(255, 255, 255); margin-top:5px; margin-bottom:15px; margin-left: 7%; margin-right: 7%; width:86%">
             {% for vote in votes %}
                 {% if vote.voteAvaliable %}
                     <div style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px" class="{{ loop.cycle('container bg-primary', 'container bg-info') }}"
-                        name='{{ vote.voteName }}'><span class="glyphicon glyphicon-ok-circle"></span> {{ vote.voteName }}</div>
+                        name='{{ vote.voteName }}'><span class="glyphicon glyphicon-ok-circle"></span> <strong>{{ vote.voteName }}</strong>: {{ vote.voteCount }} votes</div>
                 {% else %}
                     <div style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px" class="{{ loop.cycle('container bg-primary', 'container bg-info') }}"
-                        name='{{ vote.voteName }}'><span class="glyphicon glyphicon-remove-circle"></span> {{ vote.voteName }}</div>
+                        name='{{ vote.voteName }}'><span class="glyphicon glyphicon-remove-circle"></span> <strong>{{ vote.voteName }}</strong>: {{ vote.voteCount }} votes</div>
                 {% endif %}
             {% endfor %}
         </div>
