--- a/Website API/Version 2/templates/yearForm.html
+++ b/Website API/Version 2/templates/yearForm.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="form-group">
-                <button class="btn btn-success " name="submit" type="submit" style="margin-left: 25%; margin-right: 25%; font-size: 15px; width: 50%; height: 40px">
+                <button class="btn btn-outline-success " name="submit" type="submit" style="margin-left: 25%; margin-right: 25%; font-size: 15px; width: 50%; height: 40px">
                     Submit
                 </button>
         </div>
@@ -75,8 +75,8 @@
     <div class="alert alert-warning" style="margin-top: 50px; font-style: italic; height: 10px">
         <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers</p>
     </div>
-    <div class="alert alert-primary" style="margin-top: 20px; font-style: italic; height: 10px">
-        <p style="text-align: center; margin-top: -10px">Programmed by <strong>ENTITY Development</strong> and <strong>Bit Bandits</strong></p>
+    <div class="alert alert-primary" style="padding-top: 10px">
+        <p style="text-align: center">Programmed by <strong>ENTITY Development</strong> and <strong>Bit Bandits</strong></p>
     </div>
 
 </body>
