--- a/Website API/Version 2/templates/home.html
+++ b/Website API/Version 2/templates/home.html
@@ -42,7 +42,7 @@
     </div>
 
 
-    <div class="container rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px;margin-left:2%; margin-right:2%; width:96%">
+    <div class="container-fluid rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px;margin-left:2%; margin-right:2%; width:96%">
         <h4 style="text-align: center">Vote Events</h4>
         <p style="text-align: center">Have your say about on-stage events!</p>
         <form method="POST" , action="/getVote" , style="width: 100%; margin-left: auto; margin-right: auto">
@@ -64,7 +64,7 @@
     <hr>
 
 
-    <div class="container rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
+    <div class="container-fluid rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
         <h4 style="text-align: center">Quiz Events</h4>
         <p style="text-align: center">Answer questions with limited time!</p>
         <form method='POST' action='/getQuiz' style="width: 100%; margin-left: auto; margin-right: auto">
@@ -90,7 +90,7 @@
         </a>
     </div>
 
-    <div class="container rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
+    <div class="container-fluid rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
         <h4 style="text-align: center">Stats</h4>
         {% if quizzesEntered == 1 and votesEntered == 1 %}
         You have entered <strong>{{ quizzesEntered }}</strong> quiz and have <strong>{{ votesEntered }}</strong> vote.
