--- a/Website API/Version 2/templates/quizFinished.html
+++ b/Website API/Version 2/templates/quizFinished.html
@@ -19,7 +19,7 @@
         <img src="../static/files/cdLogoQuiz.png" style="max-width:200px; height:auto; display: block; margin: 0 auto">
     </div>
 
-    <div class="container" style="padding: 20px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
+    <div class="container-fluid" style="padding: 20px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
         <div class="alert alert-info">
             <strong>{{ quizName }}</strong>: Your answers have been counted.
         </div>
