--- a/Website API/Version 2/templates/userGraphs.html
+++ b/Website API/Version 2/templates/userGraphs.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="alert alert-primary">
+    <div class="alert alert-secondary">
         <strong>Here are todays results</strong>
     </div>
     
