--- a/Website API/Version 1/templates/vote.html
+++ b/Website API/Version 1/templates/vote.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}">
 </head>
 <body>
-    <div class="alert alert-primary" role="alert">
+    <div class="alert alert-secondary" role="alert">
         <strong>Charities Day Vote System</strong>
     </div>
     <div class="alert alert-info">
