--- a/Website API/Version 2/templates/adminLogin.html
+++ b/Website API/Version 2/templates/adminLogin.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="alert alert-primary">
+    <div class="alert alert-secondary">
         <strong style="font-size: 20px">Charities Day Admin</strong>
     </div>
     <div class="alert alert-info">
@@ -46,7 +46,7 @@
         <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers
     </div>
     </p>
-    <div class="alert alert-primary" style="padding-top: 10px">
+    <div class="alert alert-secondary" style="padding-top: 10px">
         <p style="text-align: center">Programmed by <strong>ENTITY Development</strong> and <strong>Bit Bandits</strong></p>
     </div>
 </body>
