--- a/Website API/Version 2/templates/adminPanel.html
+++ b/Website API/Version 2/templates/adminPanel.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="alert alert-primary">
+    <div class="alert alert-secondary">
         <strong style="font-size: 20px">Charities Day Admin</strong>
     </div>
     <div class="container-fluid rounded" style="padding: 10px; background-color: rgb(220, 255, 255); border-radius: 5px;margin-left:2%; margin-right:2%; width:96%">
@@ -61,7 +61,7 @@
         <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers
     </div>
     </p>
-    <div class="alert alert-primary" style="padding-top: 10px">
+    <div class="alert alert-secondary" style="padding-top: 10px">
         <p style="text-align: center">Programmed by <strong>ENTITY Development</strong> and <strong>Bit Bandits</strong></p>
     </div>
 </body>
