--- a/Website API/Version 2/templates/vote_notready.html
+++ b/Website API/Version 2/templates/vote_notready.html
@@ -9,7 +9,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" integrity="sha384-pjaaA8dDz/5BgdFUPX6M/9SUZv4d12SUPF0axWc+VRZkx5xU3daN+lYb49+Ax+Tl" crossorigin="anonymous"></script></head>
 <body>
-    <div class="alert alert-primary">
+    <div class="alert alert-secondary">
         <strong style="font-size: 20px">Charities Day Vote System</strong>
     </div>
     <div class="alert alert-success">
@@ -28,7 +28,7 @@
             <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers
         </div>
         </p>
-        <div class="alert alert-primary" style="padding-top: 10px">
+        <div class="alert alert-secondary" style="padding-top: 10px">
                 <p style="text-align: center">Programmed by <strong>ENTITY Development</strong> and <strong>Bit Bandits</strong></p>
         </div>
 </body>
