Tidied Up Admin Panel

--- a/Website API/Version 2/templates/adminPanel.html
+++ b/Website API/Version 2/templates/adminPanel.html
@@ -19,40 +19,40 @@
     <div class="alert alert-secondary">
         <strong style="font-size: 20px">Charities Day Admin</strong>
     </div>
-    <div class="container-fluid rounded" style="padding: 10px; background-color: rgb(220, 255, 255); border-radius: 5px;margin-left:2%; margin-right:2%; width:96%">
-        <div class="container-fluid bg-primary" style="padding: 10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
-            <strong>Users: </strong><span class="badge">{{ userCount }}</span>
+    <div class="container-fluid rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 5px;margin-left:2%; margin-right:2%; width:96%">
+        <div class="btn btn-primary" style="padding: 10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
+            <strong>Users: </strong><span class="badge badge-danger">{{ userCount }}</span>
         </div>
-        <div class="container-fluid bg-warning" style="padding:10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
-            <strong>Quiz SQL Entries: </strong><span class="badge">{{ quizSqlLen }}</span>
-        </div>
-        <div class="container-fluid" style="padding:10px; background-color: rgb(255, 255, 255); margin-top:5px; margin-bottom:15px; margin-left: 7%; margin-right: 7%; width:86%">
+        <div class="container-fluid rounded" style="border-radius:5px; padding:20px; background-color: rgb(225, 225, 225); margin-top:5px; margin-bottom:15px; margin-left: 7%; margin-right: 7%; width:86%">
+            <div class="btn btn-info" style="padding:10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
+                <strong>Quiz SQL Entries: </strong><span class="badge badge-danger">{{ quizSqlLen }} total answers</span>
+            </div>
             {% for quiz in quizzes %}
             {% if quiz.quizAvaliable %}
-            <div style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px" class="{{ loop.cycle('container-fluid bg-primary', 'container-fluid bg-info') }}"
-                name='{{ quiz.voteName }}'><span class="glyphicon glyphicon-ok-circle"></span> <strong>{{ quiz.quizName
-                    }}</strong>: {{ quiz.quizCount }} answers</div>
+            <div style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
+                name='{{ quiz.voteName }}'> <strong>{{ quiz.quizName
+                    }}</strong> <span class="badge badge-danger">{{ quiz.quizCount }} answers</span></div>
             {% else %}
-            <div style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px" class="{{ loop.cycle('container-fluid bg-primary', 'container-fluid bg-info') }}"
-                name='{{ quiz.quizName }}'><span class="glyphicon glyphicon-remove-circle"></span> <strong>{{
-                    quiz.quizName }}</strong>: {{ quiz.quizCount }} answers</div>
+            <div style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
+                name='{{ quiz.quizName }}' aria-disabled="true"> <strong>{{
+                    quiz.quizName }}</strong> <span class="badge badge-danger">{{ quiz.quizCount }} answers</span></div>
             {% endif %}
             {% endfor %}
         </div>
         <hr>
-        <div class="container-fluid bg-warning" style="padding:10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
-            <strong>Vote SQL Entries: </strong><span class="badge">{{ voteSqlLen }}</span>
-        </div>
-        <div class="container-fluid" style="padding:10px; background-color: rgb(255, 255, 255); margin-top:5px; margin-bottom:15px; margin-left: 7%; margin-right: 7%; width:86%">
+        <div class="container-fluid rounded" style="border-radius:5px; padding:20px; background-color: rgb(225, 225, 225); margin-top:5px; margin-bottom:15px; margin-left: 7%; margin-right: 7%; width:86%">
+            <div class="btn btn-info" style="padding:10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
+                <strong>Vote SQL Entries: </strong><span class="badge badge-danger">{{ voteSqlLen }} total votes</span>
+            </div>
             {% for vote in votes %}
             {% if vote.voteAvaliable %}
-            <div style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px" class="{{ loop.cycle('container-fluid bg-primary', 'container-fluid bg-info') }}"
-                name='{{ vote.voteName }}'><span class="glyphicon glyphicon-ok-circle"></span> <strong>{{ vote.voteName
-                    }}</strong>: {{ vote.voteCount }} votes</div>
+            <div style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
+                name='{{ vote.voteName }}'> <strong>{{ vote.voteName
+                    }}</strong> <span class="badge badge-danger">{{ vote.voteCount }} votes</span></div>
             {% else %}
-            <div style="margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px" class="{{ loop.cycle('container-fluid bg-primary', 'container-fluid bg-info') }}"
-                name='{{ vote.voteName }}'><span class="glyphicon glyphicon-remove-circle"></span> <strong>{{
-                    vote.voteName }}</strong>: {{ vote.voteCount }} votes</div>
+            <div style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
+                name='{{ vote.voteName }}' aria-disabled="true"> <strong>{{
+                    vote.voteName }}</strong> <span class="badge badge-danger">{{ vote.voteCount }} votes</span></div>
             {% endif %}
             {% endfor %}
         </div>
