--- a/Website API/Version 2/templates/adminPanel.html
+++ b/Website API/Version 2/templates/adminPanel.html
@@ -24,40 +24,56 @@
             <strong>Users: </strong><span class="badge badge-danger">{{ userCount }}</span>
         </div>
         <div class="container-fluid rounded" style="border-radius:5px; padding:20px; background-color: rgb(225, 225, 225); margin-top:5px; margin-bottom:15px; margin-left: 7%; margin-right: 7%; width:86%">
-            <div class="btn btn-info" style="padding:10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
+            <button class="btn btn-info" data-toggle="collapse" data-target="#quizzesCollapse" aria-expanded="false"
+                aria-controls="quizzesCollapse" style="padding:10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
                 <strong>Quiz SQL Entries: </strong><span class="badge badge-danger">{{ quizSqlLen }} total answers</span>
-            </div>
-            {% for quiz in quizzes %}
-            {% if quiz.quizAvaliable %}
-            <div style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
-                name='{{ quiz.quizName }}'> <strong>{{ quiz.quizName
-                    }}</strong> <span class="badge badge-danger">{{ quiz.quizCount }} answers</span></div>
-            {% else %}
-            <div style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
-                name='{{ quiz.quizName }}' aria-disabled="true"> <strong>{{
-                    quiz.quizName }}</strong> <span class="badge badge-danger">{{ quiz.quizCount }} answers</span></div>
-            {% endif %}
-            
-            {% for result in quiz.quizResults %}
-                <div class="container">
-                    {{ result.questionName }}
-                </div>
-                {% for answers in result.questionAnswers %}
-                    {% if answers == result.correctAnswer %}
-                        <strong>{{ answers }}:</strong><span class="badge badge-success">{{ result.questionTally[loop.index] }}</span>
-                    {% else %}
-                        <strong>{{ answers }}:</strong><span class="badge badge-danger">{{ result.questionTally[loop.index] }}</span>
-                    {% endif %}
-                {% endfor %}
-            {% endfor %}
+            </button>
+            <div class="collapse" id="quizzesCollapse">
+                {% for quiz in quizzes %}
+                {% if quiz.quizAvaliable %}
+                <button type="button" data-toggle="collapse" data-target="#{{ quiz.quizName }}" aria-expanded="false"
+                    aria-controls="{{ quiz.quizName }}" style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px"
+                    class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}" name='{{ quiz.quizName }}'>
+                    <strong>{{ quiz.quizName
+                        }}</strong> <span class="badge badge-success">{{ quiz.quizCount }} answers</span></button>
+                {% else %}
+                <button type="button" data-toggle="collapse" data-target="#{{ quiz.quizName }}" aria-expanded="false"
+                    aria-controls="{{ quiz.quizName }}" style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px"
+                    class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}" name='{{ quiz.quizName }}'>
+                    <strong>{{
+                        quiz.quizName }}</strong> <span class="badge badge-danger">{{ quiz.quizCount }} answers</span></button>
+                {% endif %}
 
-            {% endfor %}
-        </div>
-        <hr>
-        <div class="container-fluid rounded" style="border-radius:5px; padding:20px; background-color: rgb(225, 225, 225); margin-top:5px; margin-bottom:15px; margin-left: 7%; margin-right: 7%; width:86%">
-            <div class="btn btn-info" style="padding:10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
-                <strong>Vote SQL Entries: </strong><span class="badge badge-danger">{{ voteSqlLen }} total votes</span>
+                <div class="collapse" id="{{ quiz.quizName }}">
+                    <div class="container-fluid rounded" style="border-radius:5px; padding:5px; background-color: rgb(255, 255, 255); margin-top:5px; margin-bottom:15px; margin-left: 7%; margin-right: 7%; width:86%">
+                        {% for result in quiz.quizResults %}
+                        <div>{{ result.questionName }}</div>
+
+                        {% for answers in result.questionAnswers %}
+                        {% if answers == result.correctAnswer %}
+                        <strong>{{ answers }}:</strong><span class="badge badge-success">{{
+                            result.questionTally[loop.index-1]
+                            }}</span>
+                        {% else %}
+                        <strong>{{ answers }}:</strong><span class="badge badge-danger">{{
+                            result.questionTally[loop.index-1]
+                            }}</span>
+                        {% endif %}
+                        {% endfor %}
+                        {% endfor %}
+                    </div>
+                </div>
+
+                {% endfor %}
             </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container-fluid rounded" style="border-radius:5px; padding:20px; background-color: rgb(225, 225, 225); margin-top:5px; margin-bottom:15px; margin-left: 7%; margin-right: 7%; width:86%">
+        <button class="btn btn-info" style="padding:10px; margin-left: 5%; margin-right: 5%; font-size: 15px; width: 90%; margin-bottom:5px">
+            <strong>Vote SQL Entries: </strong><span class="badge badge-danger">{{ voteSqlLen }} total votes</span>
+        </button>
+        <div class="collapse" id="votesCollapse">
             {% for vote in votes %}
             {% if vote.voteAvaliable %}
             <div style="margin-left: 10%; margin-right: 10%; font-size: 15px; width: 80%; margin-bottom:5px" class="{{ loop.cycle('btn btn-outline-primary', 'btn btn-outline-info') }}"
@@ -71,13 +87,20 @@
             {% endfor %}
         </div>
     </div>
+    </div>
     <div class="alert alert-warning" style="margin-top: 50px; font-style: italic; height: 10px">
         <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers
     </div>
     </p>
-    <div class="alert alert-secondary" style="padding-top: 10px">
+    <div class="alert alert-info" style="padding-top: 10px">
         <p style="text-align: center">Programmed by <strong>ENTITY Development</strong> and <strong>Bit Bandits</strong></p>
     </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
